# ClaraMap

./: CLAUDE.md  MANAGER_FLOW_ISSUES.md  README.md  docker-compose.yml
src/backend/: .gitignore  README.md  pyproject.toml
src/backend/clara/: __init__.py  config.py  main.py
src/backend/clara/agents/: __init__.py  design_assistant.py  orchestrator.py  router.py  simulation_agent.py  structured_output.py  tools.py
src/backend/clara/agents/phase_agents/: __init__.py  agent_configuration.py  base.py  blueprint_design.py  goal_understanding.py
src/backend/clara/agents/prompts/: agent_configurator.txt  architect.txt  domain_expert.txt  interview_orchestrator.txt  phase1_goal_understanding.txt  phase2_agent_configuration.txt  phase3_blueprint_design.txt  rubric_designer.txt
src/backend/clara/api/: __init__.py  blueprints.py  context_files.py  design_sessions.py  interview_agents.py  projects.py  simulation_sessions.py
src/backend/clara/db/: __init__.py  models.py  session.py
src/backend/clara/models/blueprint/: __init__.py  agent.py  (+7 more)
src/backend/clara/security/: __init__.py
src/backend/clara/services/: __init__.py  blueprint_service.py  blueprint_validation.py  file_service.py  project_service.py
src/backend/clara/testing/: __init__.py  flow_runner.py
src/backend/tests/: conftest.py
src/backend/tests/integration/: test_projects_api.py  test_sse_streaming.py
src/backend/tests/unit/: test_blueprint_schema.py  test_blueprint_validation.py  test_clara_tools.py  test_project_service.py  test_security.py  test_simulation_agent.py  test_structured_output.py
(+59 files in other folders)
